# aoc2021

./: README.md  package-lock.json
castform/: day1.cpp  day2.cpp  day3.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  readme.md
leaphant/days/day1/src/: main.rs
leaphant/days/day2/src/: main.rs
leaphant/days/day3/src/: main.rs
leaphant/fetcher/: Cargo.toml
leaphant/fetcher/src/: main.rs
metal/: README.md
metal/1/: part1.js  part2.js
metal/2/: part1.js  part2.js
metal/3/: part1.js  part2.js
metal/4/: part1.js
metal/6/: part1.js
metal/base/: part2.js
soopyc/: .gitignore  Makefile  README.md  pyproject.toml  run.py
soopyc/aoc/day1/: a.py  b.py  input.py
soopyc/aoc/tools/: console.py  fetch_input.py  init_day.py
soopyc/logs/: .gitignore  day-1a.html  day-1b.html
soopyc/skel/: __main__.py  a.py  b.py
yawm/: puzzles.sln
yawm/puzzles/: Program.cs
yawm/puzzles/1/: input.txt  one.cs
yawm/puzzles/2/: input.txt  two.cs
yawm/puzzles/3/: input.txt  three.cs
yawm/puzzles/4/: four.cs  input.txt
yawm/puzzles/5/: five.cs  input.txt
